* update gjs to 2:1.68.3-1

--- a/gjs/PKGBUILD
+++ b/gjs/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=gjs
-pkgver=1.68.1
+pkgver=1.68.3
 pkgrel=1
 epoch=2
 pkgdesc="Javascript Bindings for GNOME"
@@ -14,7 +14,7 @@ depends=(cairo gobject-introspection-runtime js78 dconf readline)
 makedepends=(gobject-introspection git meson dbus)
 checkdepends=(valgrind xorg-server-xvfb gtk3 gtk4)
 provides=(libgjs.so)
-_commit=1639d90f350aa271cb84478c8ae69c1aa2abb419  # tags/1.68.1^0
+_commit=44999624184db531715fcf65721c1882b4a748bc  # tags/1.68.3^0
 source=("git+https://gitlab.gnome.org/GNOME/gjs.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -25,9 +25,6 @@ pkgver() {
 
 prepare() {
   cd $pkgname
-
-  # Fix _LocalFilePrototype
-  git cherry-pick -n ec9385b89cb2bce0615093c3c957cbbb5ea6b769
 }
 
 build() {
@@ -39,11 +36,11 @@ build() {
 }
 
 check() {
-  xvfb-run -s '-screen 0 1920x1080x24 -nolisten local' \
+  xvfb-run -s '-nolisten local' \
     meson test -C build --print-errorlogs
 }
 
 package() {
   depends+=(libreadline.so)
-  DESTDIR="$pkgdir" meson install -C build
+  meson install -C build --destdir "$pkgdir"
 }
