* update slirp4netns to 1.1.12-1

--- a/slirp4netns/PKGBUILD
+++ b/slirp4netns/PKGBUILD
@@ -1,18 +1,17 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 # Maintainer: Morten Linderud <foxboron@archlinux.org>
+# Maintainer: Frederik Schwan <freswa at archlinux dot org>
 
 pkgname=slirp4netns
 pkgdesc='User-mode networking for unprivileged network namespaces'
-pkgver=1.1.11
+pkgver=1.1.12
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/rootless-containers/slirp4netns"
 license=(GPL2)
 depends=(glibc glib2 libcap libseccomp libslirp)
 makedepends=(git)
-# TODO: Check if they are going to continue signing the commits
-_commit=368e69ccc074628d17a9bb9a35b8f4b9f74db4c6	#refs/tags/v1.1.11^{}
+_commit=7a104a101aa3278a2152351a082a6df71f57c9a3	#refs/tags/v1.1.12^{}
 source=("git+$url#commit=$_commit")
 sha256sums=('SKIP')
 
