--- a/pulseaudio/PKGBUILD
+++ b/pulseaudio/PKGBUILD
@@ -4,20 +4,18 @@
 pkgbase=pulseaudio
 pkgname=(pulseaudio libpulse pulseaudio-{zeroconf,lirc,jack,bluetooth,equalizer,rtp})
 pkgdesc="A featureful, general-purpose sound server"
-pkgver=14.2
-pkgrel=3
+pkgver=15.0
+pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.freedesktop.org/wiki/Software/PulseAudio/"
 license=(GPL)
 makedepends=(libasyncns libcap attr libxtst libsm libsndfile rtkit libsoxr
              speexdsp tdb systemd dbus avahi bluez bluez-libs jack2 sbc
              lirc openssl fftw orc gtk3 webrtc-audio-processing check git meson
-             xmltoman doxygen)
-_commit=6a487c5244563f49a025088de3510c80824fc99e  # tags/v14.2^0
-source=("git+https://gitlab.freedesktop.org/pulseaudio/pulseaudio.git#commit=$_commit"
-        pulseaudio-meson-58.patch)
-sha256sums=('SKIP'
-            'e23ce0ddf5a63dee8d91fc1d3bb9323f1e3bfc76d58420bf89f19d23d27f5929')
+             xmltoman valgrind doxygen)
+_commit=6329a2498eb038f8a9537888280a62b00a93f68e  # tags/v15.0^0
+source=("git+https://gitlab.freedesktop.org/pulseaudio/pulseaudio.git#commit=$_commit")
+sha256sums=('SKIP')
 
 pkgver() {
   cd pulseaudio
@@ -29,20 +27,23 @@ prepare() {
 
   # Freeze version before patching
   ./git-version-gen doesnt-exist >.tarball-version
-
-  patch -Np1 -i ${srcdir}/pulseaudio-meson-58.patch
 }
 
 build() {
-  arch-meson pulseaudio build \
-    -D pulsedsp-location='/usr/\$LIB/pulseaudio' \
-    -D stream-restore-clear-old-devices=true \
+  local meson_options=(
+    -D stream-restore-clear-old-devices=true
+    -D pulsedsp-location='/usr/\$LIB/pulseaudio'
     -D udevrulesdir=/usr/lib/udev/rules.d
+    -D bluez5-gstreamer=disabled
+    -D elogind=disabled
+    -D tcpwrap=disabled
+  )
+
+  arch-meson pulseaudio build "${meson_options[@]}"
   meson compile -C build
 }
 
 check() {
-  [ "${CARCH}" == 'powerpc' ] && return 0
   meson test -C build --print-errorlogs
   ninja -C build test-daemon
 }
@@ -77,7 +78,7 @@ package_pulseaudio() {
   done
   pulsever=${pulsever%%-*}
 
-  DESTDIR="$pkgdir" meson install -C build
+  meson install -C build --destdir "$pkgdir"
 
   cd "$pkgdir"
 
