* update pcaudiolib to 1.2-1

--- a/pcaudiolib/PKGBUILD
+++ b/pcaudiolib/PKGBUILD
@@ -1,15 +1,16 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Daniel M. Capella <polyzen@archlinux.org>
+
 pkgname=pcaudiolib
-pkgver=1.1
-pkgrel=3
+pkgver=1.2
+pkgrel=1
 pkgdesc='Portable C Audio Library'
 url=https://github.com/espeak-ng/pcaudiolib
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
 license=('GPL3')
 depends=('alsa-lib' 'libpulse')
 source=("$url/archive/$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('d503c11b355601e1e05f0f438a0cd9ce277d19fd53d3f7edf26f6e17f1f8184e8b2112a282e8ed74db8646bb5534d2a9a3c707b1742ce02ef13fd89669785007')
+b2sums=('a16e50fd789a88f10a56323afd2637c13e2383392cc287aad4cd8ef3f1f475c2754dca53e0fd5453b5fc9ee45392a0b9b6d8d7a2d0e88214e6194bbc2ce1e1ff')
 
 prepare() {
   cd $pkgname-$pkgver
