--- a/python/python-google-auth/PKGBUILD
+++ b/python/python-google-auth/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-google-auth
-pkgver=1.28.1
+pkgver=1.30.1
 pkgrel=1
 pkgdesc="Google Authentication Library"
 url="https://github.com/GoogleCloudPlatform/google-auth-library-python"
@@ -12,9 +12,9 @@ depends=('ca-certificates' 'python-pyasn1-modules' 'python-rsa' 'python-setuptoo
          'python-cachetools')
 checkdepends=('python-pytest' 'python-mock' 'python-requests' 'python-flask'
               'python-oauth2client' 'python-pytest-localserver' 'python-cryptography'
-              'python-freezegun' 'python-responses' 'python-pyopenssl')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/GoogleCloudPlatform/google-auth-library-python/archive/v$pkgver.tar.gz")
-sha512sums=('3fe3e1d296ed829c15b8c814fba5603bd073c3c3578225804280ff77ce7fe9f5c6f51c9160b9df79f00286245403924739ef3c8db0d75f4f9003dc2038728dfa')
+              'python-freezegun' 'python-responses' 'python-pyopenssl' 'python-pyu2f')
+source=("https://github.com/GoogleCloudPlatform/google-auth-library-python/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
+sha512sums=('8d695aae5456df5653d897015b893ee8b3e9e35226dd1877b58e2a712841858d9d69e56efa89ef9d1295aa5a3ba461229cbe2666c2b065ed8704f81dfcbbe339')
 
 prepare() {
   # Use system cert
