--- a/python/python-json-logger/PKGBUILD
+++ b/python/python-json-logger/PKGBUILD
@@ -2,30 +2,31 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-json-logger
-pkgver=0.1.11
-pkgrel=5
+pkgver=2.0.2
+pkgrel=1
 pkgdesc='A python library adding a json log formatter'
 arch=('any')
 license=('BSD')
 url='https://github.com/madzak/python-json-logger'
-depends=('python-setuptools')
-source=("$pkgname-v$pkgver.tar.gz::https://github.com/madzak/python-json-logger/archive/v$pkgver.tar.gz")
-sha512sums=('de0e66fd99d5b763c1fe2574e0e2cfc8c1053b88adbbc9b7bf8a48027c1c14c141c1389a303f9dcc43a18671085abaef8650150ecd4a7c281a2a966de5f0f136')
+depends=('python')
+makedepends=('python-setuptools')
+source=("https://github.com/madzak/python-json-logger/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
+sha512sums=('ccdd88237bd05cb5b005856185ad54160e15bca3126c42484cd556d9fa0ea213bb4cee156bc741c47515f5d09e0e76e8fb61ba3a34fe54199242a54389c4119d')
 
 build() {
-  cd "$srcdir"/python-json-logger-$pkgver
+  cd python-json-logger-$pkgver
   python setup.py build
 }
 
 check() {
-  cd "$srcdir"/python-json-logger-$pkgver
+  cd python-json-logger-$pkgver
   python setup.py test
 }
 
 package() {
   cd python-json-logger-$pkgver
   python setup.py install --root="$pkgdir" --optimize=1
-  install -D -m644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
+  install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
 }
 
 # vim:set ts=2 sw=2 et:
