--- a/python/python-tomli/PKGBUILD
+++ b/python/python-tomli/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-tomli
-pkgver=1.1.0
+pkgver=1.2.1
 pkgrel=1
 pkgdesc="A lil' TOML parser"
 url="https://github.com/hukkin/tomli"
@@ -12,10 +12,12 @@ depends=('python')
 makedepends=('python-dephell' 'python-setuptools')
 checkdepends=('python-pytest' 'python-dateutil')
 source=("https://github.com/hukkin/tomli/archive/$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('bd452d7a2ded403f3028ef66eb3dfa710f638e40a5737a23572538c1e3f6c6e17f74be4a41fa1b62b117e6d16f123a7f34eae9f221725fbd94eb7c8a5821838c')
+sha512sums=('34f9529b137331b0ae03ac99170b3f6509847356594be14166bae306ea4fbbddff808ffe0c48d05434f72d223a2f35b511675217053029d287725b7142fbd089')
 
 prepare() {
   cd tomli-$pkgver
+  # flit is not needed at runtime
+  sed -i '/flit_core/d' pyproject.toml
   dephell deps convert --from pyproject.toml --to setup.py
 }
 
