--- a/poppler/PKGBUILD
+++ b/poppler/PKGBUILD
@@ -4,19 +4,19 @@
 
 pkgbase=poppler
 pkgname=('poppler' 'poppler-glib' 'poppler-qt5' 'poppler-qt6')
-pkgver=21.07.0
-pkgrel=2
+pkgver=21.08.0
+pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
 license=('GPL')
 makedepends=('libjpeg' 'gcc-libs' 'cairo' 'fontconfig' 'openjpeg2' 'gtk3' 'pkgconfig' 'lcms2' 
-             'gobject-introspection' 'icu' 'qt5-base' 'git' 'nss' 'gtk-doc' 'curl' 'poppler-data'
-	     'cmake' 'python' 'boost' 'qt6-base')
+             'gobject-introspection' 'icu' 'qt5-base' 'qt6-base' 'git' 'nss' 'gtk-doc' 'curl' 'poppler-data'
+             'cmake' 'python' 'boost')
 options=('!emptydirs')
 url="https://poppler.freedesktop.org/"
 # https://gitlab.freedesktop.org/poppler/poppler
 source=(https://poppler.freedesktop.org/${pkgbase}-${pkgver}.tar.xz{,.sig}
-        test::git+https://anongit.freedesktop.org/git/poppler/test/#commit=03a4b9eb854a06a83c465e82de601796c458bbe9)
-sha256sums=('e26ab29f68065de4d6562f0a3e2b5435a83ca92be573b99a1c81998fa286a4d4'
+        test::git+https://anongit.freedesktop.org/git/poppler/test/#commit=466b4e791dc02ede85898124a99024264f2290d5)
+sha256sums=('e9cf5dc5964bce4bb0264d1c4f8122706c910588b421cfc30abc97d6b23e602d'
             'SKIP'
             'SKIP')
 validpgpkeys=('CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7') # "Albert Astals Cid <aacid@kde.org>"
@@ -37,7 +37,6 @@ build() {
 }
 
 check() {
-  #[ "${CARCH}" == 'powerpc' ] && return 0
   cd build
   LANG=en_US.UTF8 make test
 }
@@ -55,7 +54,7 @@ package_poppler() {
   # cleanup for splitted build
   rm -vrf "${pkgdir}"/usr/include/poppler/{glib,qt5,qt6}
   rm -vf "${pkgdir}"//usr/lib/libpoppler-{glib,qt5,qt6}.*
-  rm -vf "${pkgdir}"/usr/lib/pkgconfig/poppler-{glib,qt5}.pc
+  rm -vf "${pkgdir}"/usr/lib/pkgconfig/poppler-{glib,qt5,qt6}.pc
   rm -vrf "${pkgdir}"/usr/{lib,share}/gir*
   rm -vrf "${pkgdir}"/usr/share/gtk-doc
 }
@@ -93,4 +92,5 @@ package_poppler-qt6() {
   cd build
   make -C qt6 DESTDIR="${pkgdir}" install
   install -m755 -d "${pkgdir}/usr/lib/pkgconfig"
+  install -m644 poppler-qt6.pc "${pkgdir}/usr/lib/pkgconfig/"
 }
