--- a/libmbim/PKGBUILD
+++ b/libmbim/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=libmbim
-pkgver=1.24.8
-pkgrel=1
+pkgver=1.26.0
+pkgrel=2
 pkgdesc="MBIM modem protocol helper library"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.freedesktop.org/wiki/Software/libmbim/"
 license=(GPL2)
-depends=(glib2 bash systemd libgudev)
-makedepends=(gtk-doc python git help2man autoconf-archive gobject-introspection)
+depends=(glib2 bash systemd)
+makedepends=(gtk-doc python git help2man gobject-introspection)
 provides=(libmbim-glib.so)
-_commit=a183b73c49729addad059e90b5dcdad7aa5ba54d  # tags/1.24.8
+_commit=717067603d82c14452e70fa24cacb60ac7688685  # tags/1.26.0
 source=("git+https://gitlab.freedesktop.org/mobile-broadband/libmbim.git#commit=$_commit")
 sha256sums=('SKIP')
 
