* update nodejs to 16.6.2-1

--- a/nodejs/nodejs/PKGBUILD
+++ b/nodejs/nodejs/PKGBUILD
@@ -9,36 +9,37 @@
 # Contributor: TIanyi Cui <tianyicui@gmail.com>
 
 pkgname=nodejs
-pkgver=16.5.0
+pkgver=16.6.2
 pkgrel=1
 pkgdesc='Evented I/O for V8 javascript'
 arch=(x86_64 powerpc64le)
 url='https://nodejs.org/'
 license=('MIT')
 depends=('openssl' 'zlib' 'icu' 'libuv' 'libnghttp2' 'c-ares') # 'http-parser' 'v8')
+makedepends=('python' 'procps-ng')
 provides=('npm')
 conflicts=('npm')
-makedepends=('python' 'procps-ng')
-source=("https://github.com/nodejs/node/archive/v$pkgver/nodejs-$pkgver.tar.gz")
-sha512sums=('cc5c5681101766dba6701906cbcd862634e02acbc966f8fe33b2a0edc69a4e603846ba1a65d476b0b2860d7d77f449cb4324b3bc6041ebf049d82f28bfafc0dd')
+source=("https://github.com/nodejs/node/archive/v$pkgver/nodejs-$pkgver.tar.gz"
+        system-c-ares.patch)
+sha512sums=('a520812f36005e1ed78dde956179e5c51e87070804ab6e0454056835119cd57cfb7e5d5a457609243452d3d50fab705d7b4af6695d3b54d4e61f005d04be6fc4'
+            'bca85b5a4622b38f20f3787bdb2784db76cd4b213fadf8a5813a375080e7481c4aff7556712d59df3e19849a7eb6b2f048a69b4e2162cb717ab1b3a791d2558e')
+
+prepare() {
+  patch -d node-$pkgver -Rp1 < system-c-ares.patch
+}
 
 build() {
   cd node-$pkgver
-   case "${CARCH}" in
-     powerpc64le) CPU=ppc64 ;;
-     x86_64) CPU=x64 ;;
-   esac
 
   ./configure \
     --prefix=/usr \
     --with-intl=system-icu \
-    --dest-cpu=${CPU} \
     --shared-openssl \
     --shared-zlib \
     --shared-libuv \
     --experimental-http-parser \
-    --shared-nghttp2
-    # --shared-cares
+    --shared-nghttp2 \
+    --shared-cares
     # --shared-v8
     # --shared-http-parser
 
