* update blender to 17:2.93.2-1

--- a/blender/PKGBUILD
+++ b/blender/PKGBUILD
@@ -8,13 +8,13 @@
 # fine with them.
 
 pkgname=blender
-pkgver=2.93.1
-pkgrel=5
+pkgver=2.93.2
+pkgrel=1
 epoch=17
 pkgdesc="A fully integrated 3D graphics creation suite"
 arch=(x86_64 powerpc64le)
 license=('GPL')
-url="http://www.blender.org"
+url="https://www.blender.org"
 depends=('libpng' 'libtiff' 'openexr' 'python' 'desktop-file-utils' 'python-requests' 'potrace'
          'shared-mime-info' 'hicolor-icon-theme' 'xdg-utils' 'glew' 'openjpeg2' 'python-numpy'
          'freetype2' 'openal' 'ffmpeg' 'fftw' 'boost-libs' 'opencollada' 'alembic' 'openxr'
