* update kde-applications-meta to 21.08-1

--- a/kde/kde-applications-meta/PKGBUILD
+++ b/kde/kde-applications-meta/PKGBUILD
@@ -16,8 +16,8 @@ pkgname=(kde-applications-meta
          kde-system-meta
          kde-utilities-meta
          telepathy-kde-meta)
-pkgver=20.12
-pkgrel=4
+pkgver=21.08
+pkgrel=1
 arch=(any)
 url='https://www.archlinuxpower.org/'
 
@@ -47,7 +47,6 @@ package_kde-education-meta() {
   replaces=(kdeedu-meta)
   depends=(artikulate
            blinken
-           cantor
            kalgebra
            kalzium
            kanagram
@@ -74,7 +73,6 @@ package_kde-graphics-meta() {
   depends=(gwenview
            kamera
            kcolorchooser
-           kimagemapeditor
            kipi-plugins
            kolourpaint
            kruler
@@ -108,7 +106,6 @@ package_kde-network-meta() {
            kget
            kio-extras
            kio-gdrive
-           konqueror
            konversation
            kopete
            krdc
@@ -128,12 +125,10 @@ package_kde-pim-meta() {
            kaddressbook
            kalarm
            kleopatra
-           kmail
            knotes
-           kontact
+           eontact
            korganizer
-           kdepim-addons
-           grantlee-editor)
+	   kdepim-addons)
 }
 
 package_kde-sdk-meta() {
