--- a/glib2/PKGBUILD
+++ b/glib2/PKGBUILD
@@ -4,13 +4,13 @@
 
 pkgbase=glib2
 pkgname=(glib2 glib2-docs)
-pkgver=2.68.3
-pkgrel=2.1
+pkgver=2.68.4
+pkgrel=1
 pkgdesc="Low level core library"
 url="https://wiki.gnome.org/Projects/GLib"
 license=(LGPL)
 arch=(x86_64 powerpc64le powerpc)
-depends=(pcre 'libffi>=3.4' util-linux-libs zlib)
+depends=(pcre libffi util-linux-libs zlib)
 makedepends=(gettext gtk-doc shared-mime-info python libelf git util-linux
              meson dbus)
 checkdepends=(desktop-file-utils)
