--- a/python/python-pylint/PKGBUILD
+++ b/python/python-pylint/PKGBUILD
@@ -1,42 +1,55 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Angel Velasquez <angvp@archlinux.org>
-# Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Caleb Maclennan <caleb@alerque.com>
+# Contributor: Angel Velasquez <angvp@archlinux.org>
+# Contributor: Felix Yan <felixonmars@archlinux.org>
 # Contributor: Stéphane Gaudreault <stephane@archlinux.org>
 # Contributor: Alexander Fehr <pizzapunk gmail com>
 
-pkgname=python-pylint
-pkgver=2.8.2
+_pyname=pylint
+pkgname=python-$_pyname
+pkgver=2.10.2
 pkgrel=1
-pkgdesc="Analyzes Python code looking for bugs and signs of poor quality"
-arch=('any')
-url="https://pylint.org"
-license=('GPL')
-depends=('python-astroid' 'python-mccabe' 'python-isort' 'python-setuptools' 'python-toml')
-makedepends=('python-pytest-runner' 'python-pytest-benchmark' 'python-setuptools-scm'
-             'python-sphinx')
-checkdepends=('mpdecimal')
-optdepends=('tk: Pylint GUI'
-            'graphviz: To have other output formats than dot or vcg')
+pkgdesc='Analyzes Python code looking for bugs and signs of poor quality'
+arch=(any)
+url=https://pylint.org
+license=(GPL)
+depends=(python
+         python-astroid
+         python-platformdirs)
+makedepends=(python-isort
+	     python-setuptools
+             python-sphinx)
+checkdepends=(mpdecimal
+              python-mccabe
+              python-toml
+              python-pytest)
+optdepends=('graphviz: Enable output formats other than dot or vcg'
+            'tk: Pylint GUI')
+_archive="$_pyname-$pkgver"
 source=("https://github.com/PyCQA/pylint/archive/v$pkgver/pylint-$pkgver.tar.gz")
-sha512sums=('7023603668f540ecc0b35f3289377855c4c0df01e04a9af255f5c8031f568f6b76508bb3a7f0aba8e76a86b63eae423908c30f47258d6dee46bb23320c952701')
+sha256sums=('639254a0ef06dacfcfb27ce01bc3b1ddf27dbe702ba0685ae0286e0d02ff9194')
 
-export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
+prepare() {
+	cd "$_archive"
+	# Remove overly restrictive dependency pinning that ends up in runtime checks
+	sed -i -e '/>=/{s/>.*//;p}' setup.cfg
+}
 
 build() {
-  cd pylint-$pkgver
-  python setup.py build
-  make PYTHONPATH="$PWD/build/lib" -C doc man
+	cd "$_archive"
+	python setup.py build
+	make PYTHONPATH="$PWD/build/lib" -C doc man
 }
 
 check() {
-  cd pylint-$pkgver
-  python setup.py pytest || echo "Tests failed"
+	cd "$_archive"
+	PYTHONPATH="$PWD/build/lib" pytest \
+		--deselect tests/benchmark/test_baseline_benchmarks.py
 }
 
 package() {
-  cd pylint-$pkgver
-  python setup.py install --prefix=/usr --root="$pkgdir" --skip-build --optimize=1
-
-  install -d "$pkgdir"/usr/share/man/man1
-  install -m644 doc/_build/man/* "$pkgdir"/usr/share/man/man1
+	cd "$_archive"
+	export PYTHONHASHSEED=0
+	python setup.py install --root="$pkgdir" --optimize=1 --skip-build
+	install -Dm0644 -t "$pkgdir/usr/share/man/man1/" doc/_build/man/*
 }
