--- a/go/podman/PKGBUILD
+++ b/go/podman/PKGBUILD
@@ -5,11 +5,11 @@
 
 pkgbase=podman
 pkgname=(podman podman-docker)
-pkgver=3.2.3
+pkgver=3.3.0
 pkgrel=1
 pkgdesc='Tool and library for running OCI-based containers in pods'
 arch=(x86_64 powerpc64le)
-url='https://github.com/containers/libpod'
+url='https://github.com/containers/podman'
 license=(Apache)
 depends=(cni-plugins conmon containers-common
          device-mapper iptables libseccomp
@@ -22,8 +22,15 @@ validpgpkeys=('B7DBDCA456F7335E91F1C25CD3624C551D0515C4'
 sha256sums=('SKIP')
 
 pkgver() {
-  cd libpod
+  cd $pkgname
   git describe --tags | sed 's/^v//;s/-/+/g'
+}
+
+prepare(){
+  cd $pkgname
+  # Fix trimpath in makefile
+  # https://github.com/containers/podman/commit/e7b7c90bae1c65f61f524498e0ff152639f1ce04.patch 
+  git cherry-pick -n e7b7c90bae1c65f61f524498e0ff152639f1ce04  
 }
 
 build() {
@@ -34,7 +41,7 @@ build() {
   export CGO_LDFLAGS="${LDFLAGS}"
   export GOFLAGS="-buildmode=pie -trimpath"
 
-  cd libpod
+  cd $pkgname
   make EXTRA_LDFLAGS='-s -w -linkmode=external'
 }
 
@@ -45,7 +52,7 @@ package_podman() {
               'catatonit: --init flag support'
               'crun: support for unified cgroupsv2')
 
-  cd libpod
+  cd $pkgname
   make install install.completions DESTDIR="$pkgdir" PREFIX=/usr
   # remove man pages provided by containers-common
   rm -rvf "${pkgdir}/usr/share/man/man5"
@@ -57,6 +64,6 @@ package_podman-docker() {
   conflicts=(docker)
   provides=(docker)
 
-  cd libpod
+  cd podman
   make -j1 install.docker-full DESTDIR="$pkgdir" PREFIX=/usr
 }
