--- a/nodejs/nodejs-lts-dubnium/PKGBUILD
+++ b/nodejs/nodejs-lts-dubnium/PKGBUILD
@@ -3,16 +3,15 @@
 
 pkgname=nodejs-lts-dubnium
 pkgver=10.24.0
-pkgrel=2.1
+pkgrel=2.2
 pkgdesc="Evented I/O for V8 javascript (LTS release: Dubnium)"
 arch=(x86_64 powerpc64le powerpc)
 url="https://nodejs.org/"
 license=(MIT)
 depends=(openssl zlib icu libuv http-parser c-ares libnghttp2)
 makedepends=(python2 procps-ng)
-provides=(nodejs "nodejs=$pkgver")
+provides=(npm nodejs "nodejs=$pkgver")
 conflicts=(nodejs)
-provides=(npm)
 source=("${url}/dist/v${pkgver}/node-v${pkgver}.tar.xz"
 	icu68.patch
 	ppc32.patch)
