--- a/ibus/PKGBUILD
+++ b/ibus/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgbase=ibus
 pkgname=(ibus libibus)
-pkgver=1.5.24
+pkgver=1.5.25
 pkgrel=2
 pkgdesc="Next Generation Input Bus for Linux"
 arch=(x86_64 powerpc64le powerpc)
@@ -11,10 +11,10 @@ url="https://github.com/ibus/ibus/wiki"
 license=('LGPL')
 depends=('dconf' 'gtk3' 'hicolor-icon-theme' 'libnotify' 'dbus-python' 'python-gobject'
          'iso-codes' 'librsvg')
-makedepends=('gobject-introspection' 'vala' 'intltool' 'gnome-common' 'gtk-doc' 'gtk2' 'qt5-base'
-             'unicode-cldr' 'unicode-character-database' 'unicode-emoji' 'git')
+makedepends=('gobject-introspection' 'vala' 'intltool' 'gnome-common' 'gtk-doc' 'gtk4' 'gtk2'
+             'qt5-base' 'unicode-cldr' 'unicode-character-database' 'unicode-emoji' 'git')
 options=('!emptydirs')
-_commit=4d51b73b69de9003c0b7e8a2558d8666503b6f16  # 1.5.24
+_commit=cfb263f04f82a83dd94f6eedcd5017d40a4a1a05  # 1.5.25
 source=("git+https://github.com/ibus/ibus#commit=$_commit")
 sha512sums=('SKIP')
 
@@ -38,6 +38,7 @@ build() {
     --enable-dconf \
     --enable-wayland \
     --enable-gtk-doc \
+    --enable-gtk4 \
     --disable-memconf \
     --enable-ui \
     --disable-python2 \
