* update appstream to 0.14.5-2

--- a/appstream/PKGBUILD
+++ b/appstream/PKGBUILD
@@ -5,8 +5,8 @@
 
 pkgbase=appstream
 pkgname=(appstream appstream-qt)
-pkgver=0.14.4
-pkgrel=1
+pkgver=0.14.5
+pkgrel=2
 pkgdesc='Provides a standard for creating app stores across distributions'
 arch=(x86_64 powerpc64le powerpc)
 url='https://distributions.freedesktop.org/wiki/AppStream'
@@ -15,7 +15,7 @@ depends=(curl librsvg libyaml libstemmer lmdb libsoup)
 makedepends=(meson xmlto gobject-introspection gtk-doc qt5-tools itstool vala gperf)
 source=(https://www.freedesktop.org/software/appstream/releases/AppStream-$pkgver.tar.xz{,.asc}
         update-appstream-cache.hook)
-sha256sums=('0ab6a030b98882748ebb5faafad0e27969b43c4f32bbf4c6286d1df92e39a62a'
+sha256sums=('0bc1db19608141b090cb25d004fab2bb3b3ee8b2716de8bac162fefebe9a5ad1'
             'SKIP'
             '3a96a1479cfd18dad36c2ca3181aabe46af9bf772c00b965d86ec5f55cd0e0eb')
 validpgpkeys=(D33A3F0CA16B0ACC51A60738494C8A5FBF4DECEB) # Matthias Klumpp <matthias@tenstral.net>
@@ -23,6 +23,7 @@ validpgpkeys=(D33A3F0CA16B0ACC51A60738494C8A5FBF4DECEB) # Matthias Klumpp <matth
 build() {
   meson build AppStream-$pkgver \
     --prefix=/usr \
+    --libexecdir=lib \
     -Dqt=true \
     -Dvapi=true \
     -Dcompose=true
@@ -45,5 +46,5 @@ package_appstream-qt() {
   meson install --destdir "$pkgdir" -C build
 
 # provided by appstream
-  rm -r "$pkgdir"{/etc,/usr/{bin,include/appstream{,-compose},lib/{girepository-1.0,libappstream*,pkgconfig},share}}
+  rm -r "$pkgdir"{/etc,/usr/{bin,include/appstream{,-compose},lib/{appstreamcli-compose,girepository-1.0,libappstream*,pkgconfig},share}}
 }
