--- a/dtc/PKGBUILD
+++ b/dtc/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Frederic Bezies <fredbezies at gmail dot com>
 
 pkgname=dtc
-pkgver=1.6.0
-pkgrel=3
+pkgver=1.6.1
+pkgrel=1
 pkgdesc='Device Tree Compiler'
 url='https://www.devicetree.org/'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 license=(GPL2)
 makedepends=(swig python)
 checkdepends=(valgrind)
 source=(https://www.kernel.org/pub/software/utils/dtc/dtc-$pkgver.tar.xz)
-sha256sums=('10503b0217e1b07933e29e8d347a00015b2431bea5f59afe0bed3af30340c82d')
+sha256sums=('65cec529893659a49a89740bb362f507a3b94fc8cd791e76a8d6a2b6f3203473')
 
 prepare() {
   cd dtc-$pkgver
@@ -21,7 +21,7 @@ prepare() {
 
 build() {
   cd dtc-$pkgver
-  make
+  make -j1
 }
 
 check() {
@@ -31,5 +31,5 @@ check() {
 
 package() {
   cd dtc-$pkgver
-  DESTDIR="$pkgdir" make SETUP_PREFIX="$pkgdir/usr" PREFIX="$pkgdir/usr" install
+  DESTDIR="$pkgdir" make SETUP_PREFIX="$pkgdir/usr" PREFIX="$pkgdir/usr" install -j1
 }
