* update gcc10 to 1:10.3.0-1.1

--- a/gcc10/PKGBUILD
+++ b/gcc10/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=10.3.0
 epoch=1
 _majorver=${pkgver%%.*}
 _islver=0.24
-pkgrel=1
+pkgrel=1.1
 pkgdesc='The GNU Compiler Collection (Version 10)'
 arch=(x86_64 powerpc64le powerpc)
 license=(GPL LGPL FDL custom)
@@ -116,8 +116,10 @@ package_gcc10-libs() {
   pkgdesc='Runtime libraries shipped by GCC (Version 10)'
   depends=('glibc')
   options+=(!strip)
-  provides=(libgfortran.so libubsan.so libasan.so libtsan.so liblsan.so)
-  [ "${CARCH}" != 'powerpc' ] && provides+=(libtsan.so)
+  provides=(libgfortran.so libubsan.so libasan.so liblsan.so)
+  case "${CARCH}" in
+    x86_64) provides+=(libtsan.so) ;;
+  esac
 
   cd gcc-build
   make -C $CHOST/libgcc DESTDIR="$pkgdir" install-shared
@@ -183,8 +185,8 @@ package_gcc10() {
   make -C $CHOST/libquadmath DESTDIR="$pkgdir" install-nodist_libsubincludeHEADERS
   make -C $CHOST/libsanitizer DESTDIR="$pkgdir" install-nodist_{saninclude,toolexeclib}HEADERS
   make -C $CHOST/libsanitizer/asan DESTDIR="$pkgdir" install-nodist_toolexeclibHEADERS
-  [ "${CARCH}" != 'powerpc' ] && make -C $CHOST/libsanitizer/tsan DESTDIR="$pkgdir" install-toolexeclibLTLIBRARIES
   make -C $CHOST/libsanitizer/lsan DESTDIR="$pkgdir" install-nodist_toolexeclibHEADERS
+  [ "${CARCH}" != 'powerpc' ] && make -C $CHOST/libsanitizer/tsan DESTDIR="$pkgdir" install-nodist_toolexeclibHEADERS
 
   make -C libcpp DESTDIR="$pkgdir" install
   make -C gcc DESTDIR="$pkgdir" install-po
