--- a/filesystem/PKGBUILD
+++ b/filesystem/PKGBUILD
@@ -3,12 +3,12 @@
 # Contributor: Tom Gundersen <teg@jklm.no>
 
 pkgname=filesystem
-pkgver=2020.09.03
+pkgver=2021.05.31
 pkgrel=1
-pkgdesc='Base Arch POWER files'
-arch=(powerpc64le powerpc)
+pkgdesc='Base Arch Linux files'
+arch=(x86_64 powerpc64le powerpc)
 license=('GPL')
-url='https://www.archlinux.org'
+url='https://archlinux.org'
 depends=('iana-etc')
 backup=('etc/crypttab' 'etc/fstab' 'etc/group' 'etc/gshadow' 'etc/host.conf'
         'etc/hosts' 'etc/issue' 'etc/ld.so.conf' 'etc/motd' 'etc/nsswitch.conf'
@@ -30,7 +30,7 @@ sha256sums=('e03bede3d258d680548696623d5979c6edf03272e801a813c81ba5a5c64f4f82'
             'dad04a370e488aa85fb0a813a5c83cf6fd981ce01883fc59685447b092de84b5'
             '8ca2d8eef6fb5143c9ef7e9174ccfef59ac7ad2deee243574cd10c763156cc10'
             'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855'
-            '3b821d881a147977e251c522d722626881229d8bc150447673f39f28876ac749'
+            '39d2f719f095028fa655c246bc8608cf3b00971cb7d8c3dbae5a6d89b93a6ca7'
             'c0b6858a129b1416fa70ba32127ca0039531054b89ad04e7e74cb43d29b9ab67'
             '5e06477834f51abf42ea4e8dc199632afc6afbfd8c44354685a271e9a48d2c0a'
             '5e4088ad8d0853d390fa303f6be8c3f69c33834200cba9e90f7849f1993ca8d0'
@@ -99,10 +99,10 @@ package() {
 
   # add lib symlinks
   ln -s usr/lib lib
-  if [ $CARCH = 'x86_64' -o $CARCH = 'powerpc64le' ]; then
+  [ $CARCH = 'x86_64' -o $CARCH = 'powerpc64le' ] && {
     ln -s usr/lib lib64
     ln -s lib usr/lib64
-  fi
+  }
 
   # add bin symlinks
   ln -s usr/bin bin
