* update various pip modules

--- a/python/python-pylint/PKGBUILD
+++ b/python/python-pylint/PKGBUILD
@@ -8,20 +8,21 @@
 _pyname=pylint
 pkgname=python-$_pyname
 pkgver=2.10.2
-pkgrel=1
+pkgrel=3
 pkgdesc='Analyzes Python code looking for bugs and signs of poor quality'
 arch=(any)
 url=https://pylint.org
 license=(GPL)
+_pydeps=(astroid
+         isort
+         mccabe
+         platformdirs
+         toml)
 depends=(python
-         python-astroid
-         python-platformdirs)
-makedepends=(python-isort
-	     python-setuptools
+         "${_pydeps[@]/#/python-}")
+makedepends=(python-setuptools
              python-sphinx)
 checkdepends=(mpdecimal
-              python-mccabe
-              python-toml
               python-pytest)
 optdepends=('graphviz: Enable output formats other than dot or vcg'
             'tk: Pylint GUI')
@@ -49,7 +50,6 @@ check() {
 
 package() {
 	cd "$_archive"
-	export PYTHONHASHSEED=0
 	python setup.py install --root="$pkgdir" --optimize=1 --skip-build
 	install -Dm0644 -t "$pkgdir/usr/share/man/man1/" doc/_build/man/*
 }
