--- a/pipewire/PKGBUILD
+++ b/pipewire/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=pipewire
 pkgname=(pipewire alsa-card-profiles pipewire-docs pipewire-media-session
          pipewire-alsa pipewire-jack pipewire-pulse gst-plugin-pipewire
          pipewire-zeroconf)
-pkgver=0.3.34
+pkgver=0.3.35
 pkgrel=1
 epoch=1
 pkgdesc="Low-latency audio/video router and processor"
@@ -15,11 +15,11 @@ license=(MIT)
 arch=(x86_64 powerpc64le powerpc)
 makedepends=(git meson doxygen xmltoman valgrind libpulse alsa-lib libusb
              gst-plugins-base rtkit dbus sdl2 ncurses libsndfile bluez-libs sbc
-             libfreeaptx libfdk-aac avahi webrtc-audio-processing)
+             libfreeaptx libfdk-aac avahi webrtc-audio-processing python-docutils)
 makedepends_powerpc64le=(libldac)
 makedepends_x86_64=(libldac)
 checkdepends=(desktop-file-utils)
-_commit=1924c2c29824955b5e763f1def6967f68e403c7c  # tags/0.3.34
+_commit=91069ec3d21c4c09f91f742cd1114806196e863e  # tags/0.3.35
 source=("git+https://gitlab.freedesktop.org/pipewire/pipewire.git#commit=$_commit")
 sha256sums=('SKIP')
 
