* update libseccomp to 2.5.2-1

--- a/libseccomp/PKGBUILD
+++ b/libseccomp/PKGBUILD
@@ -5,26 +5,21 @@
 # Contributor: Patryk Kowalczyk < patryk at kowalczyk dot ws>
 
 pkgbase=libseccomp
-pkgname=(libseccomp)
-[ "${CARCH}" == 'x86_64' ] && pkgname+=(python-libseccomp)
-pkgver=2.5.1
-pkgrel=2
+pkgname=(libseccomp python-libseccomp)
+pkgver=2.5.2
+pkgrel=1
 pkgdesc='Enhanced seccomp library'
 arch=(x86_64 powerpc64le powerpc)
 license=('LGPL2.1')
 url="https://github.com/seccomp/libseccomp"
 depends=('glibc')
 checkdepends=('valgrind')
-makedepends=('gperf')
-[ "${CARCH}" == 'x86_64' ] && makedepends+=('cython' 'python-setuptools')
-source=(https://github.com/seccomp/${pkgname}/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.gz{,.asc}
-        add-5.8-powerpc-syscall-headers.patch)
-sha256sums=('ee307e383c77aa7995abc5ada544d51c9723ae399768a97667d4cdb3c3a30d55'
-            'SKIP'
-            '37715c38206ff837402c759d4ebddf83cf1ff36a0bcd607b86737db7e4b1e6d3')
-b2sums=('683ae7536c0cba36f4d30640b42361171fc34b7cb04985ea56e64369df29c440361a0205385b14580cc0e481e0f9ffd0b0e8ebd4ac98817ed59298db6b274c35'
-        'SKIP'
-        '58df0819370ad9631195436940d484c61c39979f3a53dd4e083d4b7d7b23e382f77bd8fe8963a2d749924ad3da1dbb5b1a1875738685234f452821dcbc986998')
+makedepends=('gperf' 'cython' 'python-setuptools')
+source=(https://github.com/seccomp/${pkgname}/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.gz{,.asc})
+sha256sums=('17a652dfb491d96be893960e9b791914936ee16c13b777a3caf562fe48cb87df'
+            'SKIP')
+b2sums=('b61214cb9a9a793d1f04ae1de3f62c578cfaec54fcc355947b4c71efb75072bf60497db8c8a0fd34a46764952349027df3f025ddbd276d58be93209170950e89'
+        'SKIP')
 validpgpkeys=(
   '7100AADFAE6E6E940D2E0AD655E45A5AE8CA7C8A' # Paul Moore <paul@paul-moore.com>
   '47A68FCE37C7D7024FD65E11356CE62C2B524099' # Tom Hromatka <tom.hromatka@oracle.com>
@@ -32,9 +27,6 @@ validpgpkeys=(
 
 prepare() {
   cd ${pkgbase}-${pkgver}
-
-  patch -Np1 -i ${srcdir}/add-5.8-powerpc-syscall-headers.patch
-
   autoreconf -fiv
 }
 
@@ -42,11 +34,8 @@ build() {
   cd ${pkgbase}-${pkgver}
   ./configure --prefix=/usr
   make
-  
-  if [ "${CARCH}" == 'x86_64' ]; then
-    cd src/python
-    env VERSION_RELEASE=${pkgver} python setup.py build
-  fi
+  cd src/python
+  env VERSION_RELEASE=${pkgver} python setup.py build
 }
 
 check() {
